Change subject to enum